// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render format 1`] = `
<div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
      <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: red; stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
    </svg><span class="ant-progress-text">50%</span></div>
</div>
`;

exports[`Progress render negetive progress 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 0%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">0%</span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <div class="ant-progress-success-bg" style="width: 0%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">50%</span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 2`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <div class="ant-progress-success-bg" style="width: 10%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">50 10</span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text"><i class="anticon anticon-check-circle"></i></span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text"><i class="anticon anticon-check-circle"></i></span>
  </div>
</div>
`;
